# Voice-code

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SECURITY.md  TTS_PARAMS.md  models.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: project-architecture-overview.md
src/reasoning_agent/: cli.py  commands.py  context.py  prompts.py  runtime.py  tui.py  tui_message_components.py  tui_message_tree.py  tui_message_widgets.py  tui_models.py  tui_permission_dialog.py  tui_permissions.py  tui_query_events.py  tui_runtime.py  tui_virtual_list.py  voice_cli.py
src/reasoning_agent/agent/: abort.py  error_recovery.py  loop.py  types.py
src/reasoning_agent/compact/: __init__.py  auto_compact.py  boundary.py  context_collapse.py  micro_compact.py  prompt.py  reactive_compact.py  snip.py  stats.py  token_count.py
src/reasoning_agent/llm/: __init__.py  models.py
src/reasoning_agent/session/: __init__.py  manager.py  transcript.py
src/reasoning_agent/tools/: __init__.py  ask_user.py  bash.py  cache.py  file_edit.py  file_read.py  file_write.py  streaming_executor.py  todo_write.py
src/reasoning_agent/voice/: __init__.py  agent_bridge.py  audio_player.py  classifier.py  command_assistant.py  orchestrator.py  segment_recorder.py  stepfun_client.py  stt_client.py  timing.py  tts_client.py  voice_display.py  wakeword.py
src/voice_code/: cli.py  clipboard.py  commands.py  permissions.py  prompts.py  runtime.py  theme.py  transcript_view.py  tui.py  tui_message_components.py  tui_message_tree.py  tui_message_widgets.py  tui_models.py  tui_permission_dialog.py  tui_permissions.py  tui_query_events.py  tui_runtime.py  tui_virtual_list.py  voice_cli.py
src/voice_code/agent/: __init__.py  loop.py
src/voice_code/compact/: __init__.py  auto_compact.py  context_collapse.py  micro_compact.py  prompt.py  reactive_compact.py  snip.py  turn_split.py
src/voice_code/llm/: __init__.py  models.py
src/voice_code/memory/: __init__.py  cli.py  extract.py  freshness.py  frontmatter.py  index.py  models.py  paths.py  prompt.py  retrieve.py  select.py  service.py  store.py
src/voice_code/session/: __init__.py  manager.py
src/voice_code/subagents/: __init__.py  definitions.py  events.py  fork.py  planner.py  registry.py  runtime.py  service.py  transcripts.py  types.py
src/voice_code/tools/: __init__.py  agent.py  file_edit.py  file_read.py  file_write.py  glob_search.py  grep_search.py  streaming_executor.py  task_get.py  task_list.py  (+2 more)
tests/: conftest.py  test_compact.py  test_context.py  test_loop.py  test_models.py  test_permissions.py  test_prompts.py  test_streaming_executor.py  test_tools_bash.py  test_tools_file_edit.py  test_tools_file_read.py  test_tools_file_write.py  test_tools_glob.py  test_tools_grep.py  test_transcript.py  test_tui_event_metrics.py  test_tui_message_components.py  test_tui_message_tree.py  test_tui_message_widgets.py  test_tui_permissions.py  test_tui_query_events.py  test_voice_supervisor.py
tools/stt/: db_meter.py
(+10 files in other folders)
