[project]
name = "code-pal"
version = "0.1.0"
description = "Interactive coding agent with voice mode"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "sounddevice>=0.5.0",
    "textual>=8.2.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tools/"]

[tool.hatch.build.targets.wheel]
packages = ["src/reasoning_agent"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[project.scripts]
reasoning = "reasoning_agent.cli:main"
reasoning-voice = "reasoning_agent.voice_cli:main"
# Legacy direct TUI entry; keep for compatibility while `reasoning` becomes
# the single user-facing CLI entry point.
reasoning-tui = "reasoning_agent.tui:main"
