[project]
name = "voice-code"
version = "0.1.0"
description = "Voice Code (语码) — Interactive coding agent with voice mode"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Voice Code contributors" },
]
keywords = ["ai", "coding-agent", "voice", "cli", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "httpx>=0.28.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "sounddevice>=0.5.0",
    "textual>=8.2.7",
]

[project.urls]
Homepage = "https://github.com/yangguan-xue/Voice-code"
Repository = "https://github.com/yangguan-xue/Voice-code"
Issues = "https://github.com/yangguan-xue/Voice-code/issues"

[project.scripts]
reasoning = "voice_code.cli:main"
reasoning-voice = "voice_code.voice_cli:main"
reasoning-tui = "voice_code.tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tools/"]

[tool.hatch.build.targets.wheel]
packages = ["src/voice_code"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
warn_unused_configs = false

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]
